task2/gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: main-gw
  namespace: default
spec:
  selector:
    main: ingressgateway
  servers:
  - hosts:
    - x.com
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      mode: SIMPLE
