task2/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web
  namespace: default
spec:
  hosts:
  - "x.com"
  gateways:
  - main-gw
  http:
  - route:
    - destination:
        host: web.default.svc.cluster.local
        port:
          number: 80
